--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -823,7 +823,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ErUM-2",
+   "display_name": "ErUM",
    "language": "python",
    "name": "python3"
   },
