--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -202,7 +202,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "from data_management import EnronRequestDataset, collate_fn\n",
+    "from utilities.data_management import EnronRequestDataset, collate_fn\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
     "# Gather sentences and assign labels\n",
@@ -236,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import attention_model\n",
+    "import utilities.attention_model as attention_model\n",
     "\n",
     "import torch.nn as nn\n",
     "\n",
@@ -454,7 +454,7 @@
    "id": "32",
    "metadata": {},
    "source": [
-    "This is looking pretty good! Try playing around now with your own sentences."
+    "This is looking pretty good (but not perfect)! Try playing around now with your own sentences."
    ]
   },
   {
@@ -575,7 +575,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import visualization\n",
+    "from utilities import visualization\n",
+    "\n",
+    "import importlib\n",
+    "importlib.reload(visualization)\n",
     "\n",
     "tokens = tokenizer(visualization_sentence)\n",
     "visualization.plot_attention(tokens, attention)\n"
@@ -614,7 +617,7 @@
     "    print(\"query -> key : attention\")\n",
     "    print(\"------------------------\")\n",
     "    print(\"\")\n",
-    "    for (key, query), pair_attn in top_k_pairs:\n",
+    "    for (query, key), pair_attn in top_k_pairs:\n",
     "        print(f\"{query} → {key} : {pair_attn:.4f}\")\n",
     "\n",
     "print_top_k_pairs(attention, visualization_sentence, tokenizer, k=8)"
@@ -627,7 +630,7 @@
    "source": [
     "Do these results make sense to you?\n",
     "\n",
-    "We can also sum over the keys to see which queries are the most important as influencing words."
+    "We can also sum over the queries to see which keys are the most attended to."
    ]
   },
   {
@@ -755,7 +758,7 @@
    "source": [
     "Maybe there are some words that are not present in the vocabulary yet, but are relevant to you. These words will not be interpretable by the model, since it has never seen them. The solution is to get more training data!\n",
     "\n",
-    "For now, the easiest way to generate the training data is to do it by hand. Try adding some request and non-request examples to the training dataset, and make sure that they use words that don't exist in the dataset yet (physics-related words are good candidates here). See how the old model treats sentences that use these words (question: how would these words be treated before they are present in the vocabulary?), then train a new model with an updated vocabulary, and look at how the performance changes."
+    "For now, the easiest way to generate the training data is to do it by hand. Try adding some request and non-request examples to the training dataset, and make sure that they use words that don't exist in the dataset yet (physics-related words or words about social media are good candidates here). See how the old model treats sentences that use these words (question: how would these words be treated before they are present in the vocabulary?), then train a new model with an updated vocabulary, and look at how the performance changes."
    ]
   },
   {
@@ -811,14 +814,6 @@
    "source": [
     "tokenizer_de = get_tokenizer('spacy', language='de_core_news_sm')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
