Update environment for Colab

--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -13,12 +13,47 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "## Dataset"
+    "## Setup for Google Colab"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "2",
+   "metadata": {},
+   "source": [
+    "If you are running in Google Colab, you need to run the following setup script."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!rm -rf tutorial_repo\n",
+    "!git clone --recursive https://github.com/Benkendorfer/ErUM_Transformers_Tutorial_2025.git tutorial_repo\n",
+    "!mv tutorial_repo/data data\n",
+    "!mv tutorial_repo/utilities utilities\n",
+    "\n",
+    "!pip install torch==2.2.0 torchtext==0.17.0 \"numpy<2\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4",
+   "metadata": {},
+   "source": [
+    "## Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5",
    "metadata": {},
    "source": [
     "We will use a dataset from <https://github.com/Charlie9/enron_intent_dataset_verified?tab=readme-ov-file>. This dataset consists of sentences from emails sent between employees of the Enron corporation. Each sentence has been manually labeled regarding whether it contains a request or does not contain a request. We will train an attention model to classify sentences as \"request\" or \"no request\" sentences."
@@ -27,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "7",
    "metadata": {},
    "source": [
     "Take a look at some of these sentences. Does the dataset look as you would expect?"
@@ -55,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "9",
    "metadata": {},
    "source": [
     "## Tokenization"
@@ -74,28 +109,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "10",
    "metadata": {},
    "source": [
     "Now that we have the sentences, we need to parse them into tokens that can be fed to the model. Tokenization is a surprisingly complicated task which is highly language-dependent.\n",
     "\n",
     "(It is not as simple as identifying words; often parts of words are themselves individual tokens. The past-tense marker `-ed` must be separated from the verb `trained`, for example, to create two tokens: `train` and `ed`. German, then, requires a different algorithm --- the word `trainiert` clearly has the token `t` at the end, but then should the tokens be `trainieren` and `t`? Or `trainier` and `t`?).\n",
     "\n",
-    "Luckily, we are physicists rather than linguists, and some very clever people have done the work already. We can parse the sentences using a pre-written tokenizer from PyTorch.\n",
-    "\n",
-    "NB: You may get an error like\n",
-    "\n",
-    "```txt\n",
-    "A module that was compiled using NumPy 1.x cannot be run in NumPy 2.2.5 as it may crash.\n",
-    "```\n",
-    "\n",
-    "You can safely ignore this warning and just re-run the cell. It should not affect the rest of the tutorial."
+    "Luckily, we are physicists rather than linguists, and some very clever people have done the work already."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "12",
    "metadata": {},
    "source": [
     "Tokenize some sentences of your choosing and see what happens. Does it work as you expect, or are there any surprises? What if you try to tokenize a non-English sentence?"
@@ -117,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "14",
    "metadata": {},
    "source": [
     "Now that we can tokenize individual sentences, we need to build up a vocabulary of tokens that appear in our training data. We will also add two new tokens to the vocabulary --- a token `<unk>` representing an unknown input, and a token `<pad>` for whitespace padding."
@@ -135,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "16",
    "metadata": {},
    "source": [
     "Take a look at a few entries of the `vocab` object. What sort of object is it? What does it map words onto?"
@@ -164,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "18",
    "metadata": {},
    "source": [
     "## Model training"
@@ -183,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "19",
    "metadata": {},
    "source": [
     "Now let's train an attention-based model to classify sentences as requests or not. We will train an extremely simple model with a single attention head, just to show you how it all works.\n",
@@ -196,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "21",
    "metadata": {},
    "source": [
     "Now we can actually train the model! In order to best understand what is happening, we will use a very simple attention mechanism attached to a multilayer perceptron. The implementation has been hidden in the file `attention_model.py` --- feel free to look in there if you'd like! It's not as scary as you might think.\n",
@@ -232,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "23",
    "metadata": {},
    "source": [
     "What does the model look like?"
@@ -254,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "25",
    "metadata": {},
    "source": [
     "Now let's see how the untrained model performs on the dataset. We can define a simple function to compute the true and false positive rates."
@@ -272,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "27",
    "metadata": {},
    "source": [
     "You should have found that the true and false positive (and true and false negative) are quite bad. This is expected for the untrained model --- it is just randomly guessing.\n",
@@ -324,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "29",
    "metadata": {},
    "source": [
     "We have trained a very simple model as a proof-of-concept, but think about what might be missing here, using what you have learned from the other tutorials in the workshop. Would you want to deploy this model in the real world? How could we make it better?"
@@ -358,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "30",
    "metadata": {},
    "source": [
     "## Evaluation"
@@ -366,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "31",
    "metadata": {},
    "source": [
     "Now that the model is trained, we can evaluate its performance. First, we should compute the true positive and false positive rates."
@@ -375,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "33",
    "metadata": {},
    "source": [
     "You probably found very good performance (unless something went wrong with the training). In fact, the true positive and true negative rates might be 100%. This is indicative of some possible overfitting in the model --- how could we avoid overfitting for future training?\n",
@@ -395,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "35",
    "metadata": {},
    "source": [
     "This is looking pretty good (but not perfect)! Try playing around now with your own sentences."
@@ -460,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34",
+   "id": "37",
    "metadata": {},
    "source": [
     "What do you notice about the model behavior? Do certain words seem to cause the model to predict a sentence as being more request-like? Do certain requests consistently fail? Can you figure out how to modify an incorrectly-classified request in order to make it classify correctly?"
@@ -495,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35",
+   "id": "38",
    "metadata": {},
    "source": [
     "## Visualization"
@@ -503,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "39",
    "metadata": {},
    "source": [
     "Let's try to visualize what the attention mechanism is doing. For the following sections, if you have changed the topology of your classifier model, make sure that there is only one attention layer.\n",
@@ -514,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "41",
    "metadata": {},
    "source": [
     "The attention model has been written in such a way that we can extract the attention matrix from the last attention layer of the network. Let's grab it now."
@@ -533,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "43",
    "metadata": {},
    "source": [
     "We can interpret the entry in `[row, column] = [i, j]` in the attention matrix as the weight of a query `j` to be used in a linear update of key `i`. For a simple network with a single attention mechanism, this tells you which query words are important to update the meaning of each key word. Thus, if we plot the attention matrix, we can see which words in the sentence influence the meanings of other words (according to the model).\n",
@@ -571,14 +598,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
     "from utilities import visualization\n",
-    "\n",
-    "import importlib\n",
-    "importlib.reload(visualization)\n",
     "\n",
     "tokens = tokenizer(visualization_sentence)\n",
     "visualization.plot_attention(tokens, attention)\n"
@@ -586,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42",
+   "id": "45",
    "metadata": {},
    "source": [
     "You might find, for example, that the word `please` is influencing the meaning of the word `email`, while it is influence by the words `send` and `this`.\n",
@@ -597,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44",
+   "id": "47",
    "metadata": {},
    "source": [
     "Do these results make sense to you?\n",
@@ -636,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "49",
    "metadata": {},
    "source": [
     "Let's package everything into a single function for easy visualization."
@@ -654,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48",
+   "id": "51",
    "metadata": {},
    "source": [
     "Now it's your turn! Play around with a few sentences. What do you notice? Is the model focusing on what you expect?"
@@ -684,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50",
+   "id": "53",
    "metadata": {},
    "source": [
     "## Extensions"
@@ -703,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51",
+   "id": "54",
    "metadata": {},
    "source": [
     "If you have gotten to this point and are bored, here are some suggested extensions for you."
@@ -711,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52",
+   "id": "55",
    "metadata": {},
    "source": [
     "### Play around with the model code"
@@ -719,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53",
+   "id": "56",
    "metadata": {},
    "source": [
     "Take a look at the implementation of the model. Read the functions and see if they make sense to you. Feel free to edit the model topology and see what happens!"
@@ -727,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54",
+   "id": "57",
    "metadata": {},
    "source": [
     "### Add additional layers to the model"
@@ -735,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55",
+   "id": "58",
    "metadata": {},
    "source": [
     "The model is constructed to allow for the parameter `num_layers`. Each layer is a combination of an attention mechanism and a multilayer perceptron network. What happens if you increase the number of layers from 1 to a higher number? How does the performance of the model change? Does the visualization still make as much sense?\n",
@@ -745,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56",
+   "id": "59",
    "metadata": {},
    "source": [
     "### Augment the training sample"
@@ -753,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57",
+   "id": "60",
    "metadata": {},
    "source": [
     "Maybe there are some words that are not present in the vocabulary yet, but are relevant to you. These words will not be interpretable by the model, since it has never seen them. The solution is to get more training data!\n",
@@ -763,7 +787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58",
+   "id": "61",
    "metadata": {},
    "source": [
     "### [Hard] Train a model for a new task"
@@ -771,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59",
+   "id": "62",
    "metadata": {},
    "source": [
     "You can try to train a model for a new task. Many text datasets can be found online. The dataset <https://www.ims.uni-stuttgart.de/forschung/ressourcen/korpora/deisear/> for example contains many examples of English and German sentences, classified by expressed emotion. You could download this dataset, perform the necessary preprocessing, and train a model to classify emotions.\n",
@@ -790,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61",
+   "id": "64",
    "metadata": {},
    "source": [
     "and then load the tokenizer with"
@@ -808,11 +832,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer_de = get_tokenizer('spacy', language='de_core_news_sm')"
+    "tokenizer_de = spacy.load(\"de_core_news_sm\")"
    ]
   }
  ],
