Update Colab pre-script

--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -28,19 +28,39 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf tutorial_repo\n",
-    "!git clone --recursive https://github.com/Benkendorfer/ErUM_Transformers_Tutorial_2025.git tutorial_repo\n",
-    "!mv tutorial_repo/data data\n",
-    "!mv tutorial_repo/utilities utilities\n",
+    "try:\n",
+    "    import google.colab\n",
+    "    IN_COLAB = True\n",
+    "except ImportError:\n",
+    "    IN_COLAB = False\n",
     "\n",
-    "!pip install torch==2.2.0 torchtext==0.17.0 \"numpy<2\""
+    "if IN_COLAB:\n",
+    "    !rm -rf tutorial_repo\n",
+    "    !git clone --recursive https://github.com/Benkendorfer/ErUM_Transformers_Tutorial_2025.git tutorial_repo\n",
+    "    !mv tutorial_repo/data data\n",
+    "    !mv tutorial_repo/utilities utilities\n",
+    "\n",
+    "    import subprocess\n",
+    "\n",
+    "    result = subprocess.run(\n",
+    "        ['pip', 'install', 'torch==2.2.0', 'torchtext==0.17.0', 'numpy<2'],\n",
+    "        capture_output=True, text=True\n",
+    "    )\n",
+    "\n",
+    "    print(result.stdout)\n",
+    "\n",
+    "    if any(phrase in result.stdout for phrase in [\n",
+    "        'Installing collected packages',\n",
+    "        'Successfully installed',\n",
+    "        'upgraded',\n",
+    "        'added'\n",
+    "    ]):\n",
+    "        print(\"Restarting Colab runtime to finalize package installation...\")\n",
+    "        import os\n",
+    "        os.kill(os.getpid(), 9)"
    ]
   },
   {
