Allow attention dimension to be different from embedding dimension

--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -21,7 +21,7 @@
    "id": "2",
    "metadata": {},
    "source": [
-    "If you are running in Google Colab, you need to run the following setup script."
+    "If you are running in Google Colab, you need to run the following setup script. It will set up the environment and then kill the kernel to force a kernel restart. Do not panic when this happens."
    ]
   },
   {
@@ -44,22 +44,32 @@
     "    !mv tutorial_repo/utilities utilities\n",
     "\n",
     "    import subprocess\n",
+    "    import sys\n",
     "\n",
-    "    result = subprocess.run(\n",
-    "        ['pip', 'install', 'torch==2.2.0', 'torchtext==0.17.0', 'numpy<2'],\n",
-    "        capture_output=True, text=True\n",
+    "    process = subprocess.Popen(\n",
+    "        [sys.executable, \"-m\", \"pip\", \"install\", \"torch==2.2.0\", \"torchtext==0.17.0\", \"numpy<2\"],\n",
+    "        stdout=subprocess.PIPE,\n",
+    "        stderr=subprocess.STDOUT,\n",
+    "        text=True\n",
     "    )\n",
     "\n",
-    "    print(result.stdout)\n",
+    "    restart_needed = False\n",
+    "    for line in process.stdout:\n",
+    "        print(line, end=\"\")  # stream output to notebook\n",
+    "        if any(phrase in line for phrase in [\n",
+    "            \"Installing collected packages\",\n",
+    "            \"Successfully installed\",\n",
+    "            \"upgraded\",\n",
+    "            \"added\"\n",
+    "        ]):\n",
+    "            restart_needed = True\n",
     "\n",
-    "    if any(phrase in result.stdout for phrase in [\n",
-    "        'Installing collected packages',\n",
-    "        'Successfully installed',\n",
-    "        'upgraded',\n",
-    "        'added'\n",
-    "    ]):\n",
+    "    process.wait()\n",
+    "\n",
+    "    import os\n",
+    "\n",
+    "    if restart_needed:\n",
     "        print(\"Restarting Colab runtime to finalize package installation...\")\n",
-    "        import os\n",
     "        os.kill(os.getpid(), 9)"
    ]
   },
@@ -287,7 +297,7 @@
     "\n",
     "import torch.nn as nn\n",
     "\n",
-    "model = attention_model.RequestClassifier(len(vocab), num_layers=1)"
+    "model = attention_model.RequestClassifier(len(vocab), num_layers=1, d_attention=64, d_embedding=128)"
    ]
   },
   {
@@ -426,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate_model(model, loader)\n"
+    "evaluate_model(model, loader)"
    ]
   },
   {
@@ -856,6 +866,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import spacy\n",
     "tokenizer_de = spacy.load(\"de_core_news_sm\")"
    ]
   }
